# todos8

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  angular-metadata.tsconfig.json  angular.json  angular.json.bak  bundle.min.js  genfiles  index.html  karma.conf.js  out  package-lock.json  package.json  testlogs  todos8
.github/workflows/: build-deploy.yml
e2e/src/: app.e2e-spec.ts
prodapp/: bundle.min.js  global_stylesheet.css  global_stylesheet.css.map  index.html
src/: BUILD.bazel  index.html  require.config.js  styles.scss
src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/check/: check-routing.module.ts  check.module.ts
src/app/material-date-picker/: material-date-picker.component.html  material-date-picker.component.spec.ts  material-date-picker.component.ts
src/app/name-editor/: name-editor.component.html  name-editor.component.scss  name-editor.component.ts
src/app/normal/: normal.component.ts
src/app/return/: return-routing.module.ts  return.module.ts
