package(default_visibility = ["//visibility:public"])

# This export allows targets in other packages to reference files that live
# in this package.
exports_files([
    "tsconfig.json",
    # "node_modules/bootstrap/dist/css/bootstrap.min.css",
    # "node_modules/@angular/material/_theming.scss"
])
